<resources>
    <string name="app_name">Food In Progress</string>
    <string name="title_display">Anzeige</string>
    <string name="title_storage">Lager</string>
    <string name="title_information">Informationen</string>
    <string name="title_test1">Hallo Anzeigen</string>
    <string name="title_test2">Hallo Lager</string>
    <string name="title_test3">Hallo Informationen</string>
    <string name="title_test4">Hallo Anzeigen Karte</string>

    <!-- Drawer String -->
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>

    <!-- Layout Strings -->
    <string name="textView_name">Name</string>
    <string name="textView_amount">Menge</string>
    <string name="textView_user">User</string>
    <string name="listView_Image">Image</string>
    <string name="imageView_profile">Profile-Picture</string>
    <string name="imageView_profile_background">Profile-Background</string>

    <!-- Icon Strings-->
    <string name="map_pin">map-pin</string>
    <string name="search">search</string>
    <string name="map_card">map-card</string>
    <string name="rows">rows</string>
    <string name="back">back</string>
    <string name="camera">camera</string>
    <string name="upload">upload</string>

    <!-- Franame Display Detail Strings -->
    <string name="display_name">Name</string>
    <string name="display_dura">Haltbarkeit</string>
    <string name="display_mob">Mobilität</string>
    <string name="display_cat">Kategorie</string>
    <string name="display_amount">Menge</string>
    <string name="display_desc">Bezeichnung</string>
    <string name="display_hint_dura">Select Data</string>

    <!-- Fragment Grocery Detail Strings -->
    <string name="grocery_name">Name</string>
    <string name="grocery_dura">Haltbarkeit</string>
    <string name="grocery_cat">Kategorie</string>
    <string name="grocery_amount">Menge</string>
    <string name="grocery_desc">Bezeichnung</string>
    <string name="grocery_hint_dura">Select Data</string>

    <!-- Fragment Storage Detail Strings -->
    <string name="storage_name">Name</string>
    <string name="storage_dura">Haltbarkeit</string>
    <string name="storage_cat">Kategorie</string>
    <string name="storage_amount">Menge</string>
    <string name="storage_desc">Bezeichnung</string>
    <string name="storage_hint_dura">Select Data</string>

    <!-- String Array for Spinner
    <string-array title="spinner_elements">
        <item>Fruit</item>
        <item>Meat</item>
        <item>Milk</item>
        <item>Fish</item>
        <item>Other</item>
    </string-array>
    -->

    <string name="title_activity_display">Eigene Anzeigen</string>
    <string name="tab_text_1">Allgemein</string>
    <string name="tab_text_2">Eigene</string>
    <string name="category">Kategorie</string>
    <string name="imageView_profile_picture">Profile-Picture</string>
    <string name="generate_new">Generate new</string>

</resources>
