<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item
        android:id="@+id/action_ic_map"
        android:icon="@drawable/ic_map"
        android:title="@string/map_card"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_ic_row"
        android:icon="@drawable/ic_rows"
        android:title="@string/rows"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_ic_search"
        android:icon="@drawable/ic_search_white"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_ic_back"
        android:icon="@drawable/ic_back"
        android:title="@string/back"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_ic_profil_pic"
        android:icon="@drawable/pic_user"
        android:title="@string/imageView_profil"
        app:showAsAction="ifRoom" />

</menu>