<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/listView_Image"
            android:maxWidth="150dp"
            android:maxHeight="150dp"
            tools:srcCompat="@tools:sample/avatars[3]" />

        <TextView
            android:id="@+id/textView_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/textView_name"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView_amout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="10dp"
            android:text="@string/textView_amount"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="105dp"
            android:layout_marginEnd="10dp"
            android:text="@string/textView_user"
            android:textSize="24sp" />
    </RelativeLayout>
</LinearLayout>