<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image_gocery_view"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:contentDescription="@string/imageView_profile_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/textView_groceryEdit_detail_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/my_textview"
        android:paddingStart="10dp"
        android:text="@string/grocery_name"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_gocery_view"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/textView_groceryEdit_detail_durability"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/my_textview"
        android:hint="@string/grocery_hint_dura"
        android:paddingStart="10dp"
        android:text="@string/grocery_dura"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_groceryEdit_detail_name"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/textView_groceryEdit_detail_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/my_textview"
        android:paddingStart="10dp"
        android:text="@string/grocery_cat"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_groceryEdit_detail_durability"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/textView_detail_groceryEdit_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/my_textview"
        android:paddingStart="10dp"
        android:text="@string/grocery_amount"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_groceryEdit_detail_category"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/textView_detail_groceryEdit_description"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/my_textview"
        android:paddingStart="10dp"
        android:text="@string/grocery_desc"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_detail_groceryEdit_amount"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/button_detail_groceryEdit_cancel"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/my_button_cancel"
        android:text="@android:string/cancel"
        android:textAlignment="center"
        android:textColor="#FF0000"
        android:clickable="true"
        app:layout_constraintEnd_toStartOf="@+id/button_detail_groceryEdit_ok"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_detail_groceryEdit_description"
        tools:ignore="KeyboardInaccessibleWidget" />

    <Button
        android:id="@+id/button_detail_groceryEdit_ok"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/my_button_ok"
        android:text="@android:string/ok"
        android:textAlignment="center"
        android:textColor="#0D6EFF"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_detail_groceryEdit_cancel"
        app:layout_constraintTop_toBottomOf="@+id/textView_detail_groceryEdit_description"
        tools:ignore="KeyboardInaccessibleWidget" />

    <ImageView
        android:id="@+id/icon_grocery_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:srcCompat="@drawable/ic_camera_gross"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="@+id/image_gocery_view"
        app:layout_constraintTop_toTopOf="@+id/image_gocery_view"
        tools:ignore="KeyboardInaccessibleWidget"
        android:contentDescription="@string/camera" />

    <ImageView
        android:id="@+id/icon_grocery_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:srcCompat="@drawable/ic_upload_gross"
        android:clickable="true"
        app:layout_constraintEnd_toStartOf="@+id/icon_grocery_camera"
        app:layout_constraintTop_toTopOf="@+id/image_gocery_view"
        tools:ignore="KeyboardInaccessibleWidget"
        android:contentDescription="@string/upload" />


</androidx.constraintlayout.widget.ConstraintLayout>