<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageProfilBackgroundView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/imageView_profil_background" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/textView_detail_name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/my_textview"
        android:paddingStart="10dp"
        android:text="@string/display_name"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView_detail_durability_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/my_textview"
        android:hint="@string/hint_dura"
        android:paddingStart="10dp"
        android:text="@string/display_dura"
        android:textSize="24sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/textView_detail_mobility_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/my_textview"
        android:paddingStart="10dp"
        android:text="@string/display_mob"
        android:textSize="24sp" />

    <Spinner
        android:id="@+id/spinner_display_detail_edit"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="299dp"
        android:layout_marginEnd="20dp"
        android:text="@string/display_cat"
        android:textSize="24sp"
        android:spinnerMode="dialog"
        android:prompt="@string/display_cat"/>

    <!--
    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/textView_detail_category_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="299dp"
        android:layout_marginEnd="20dp"
        android:text="@string/display_cat"
        android:background="@drawable/my_textview"
        android:textSize="24sp" />
-->
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/textView_detail_amount_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="339dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/my_textview"
        android:paddingStart="10dp"
        android:text="@string/display_amount"
        android:textSize="24sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/textView_detail_description_edit"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="380dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/my_textview"
        android:paddingStart="10dp"
        android:text="@string/display_desc"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button_dateil_edit_Cancel"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="520dp"
        android:background="@drawable/my_button_cancel"
        android:text="@android:string/cancel"
        android:textAlignment="center"
        android:textColor="#FF0000" />

    <Button
        android:id="@+id/button_dateil_edit_OK"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="230dp"
        android:layout_marginTop="520dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/my_button_ok"
        android:text="@android:string/ok"
        android:textAlignment="center"
        android:textColor="#0D6EFF" />



</RelativeLayout>