<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image_storage_view"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:contentDescription="@string/imageView_profile_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/textView_storageEdit_detail_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/my_textview"
        android:paddingStart="10dp"
        android:text="@string/storage_name"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_storage_view"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/textView_storageEdit_detail_durability"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/my_textview"
        android:hint="@string/storage_hint_dura"
        android:paddingStart="10dp"
        android:text="@string/storage_dura"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_storageEdit_detail_name"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/textView_storageEdit_detail_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/my_textview"
        android:paddingStart="10dp"
        android:text="@string/storage_cat"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_storageEdit_detail_durability"
        tools:ignore="RtlSymmetry" />
<!--
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/textView_storageEdit_detail_mobility"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/my_textview"
        android:paddingStart="10dp"
        android:text="@string/display_mob"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_storageEdit_detail_durability"
        tools:ignore="RtlSymmetry" />

    <Spinner
        android:id="@+id/textView_groceryEdit_detail_category"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:prompt="@string/display_cat"
        android:spinnerMode="dialog"
        android:text="@string/display_cat"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_groceryEdit_detail_mobility" />


    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/textView_detail_category_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="299dp"
        android:layout_marginEnd="20dp"
        android:text="@string/display_cat"
        android:background="@drawable/my_textview"
        android:textSize="24sp" />
-->
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/textView_storageEdit_detail_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/my_textview"
        android:paddingStart="10dp"
        android:text="@string/storage_amount"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_storageEdit_detail_category"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/textView_storageEdit_detail_description"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/my_textview"
        android:paddingStart="10dp"
        android:text="@string/storage_desc"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_storageEdit_detail_amount"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/button_storageEdit_detail_cancel"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/my_button_cancel"
        android:text="@android:string/cancel"
        android:textAlignment="center"
        android:textColor="#FF0000"
        app:layout_constraintEnd_toStartOf="@+id/button_storageEdit_detail_ok"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_storageEdit_detail_description" />

    <Button
        android:id="@+id/button_storageEdit_detail_ok"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/my_button_ok"
        android:text="@android:string/ok"
        android:textAlignment="center"
        android:textColor="#0D6EFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_storageEdit_detail_cancel"
        app:layout_constraintTop_toBottomOf="@+id/textView_storageEdit_detail_description" />


    <ImageView
        android:id="@+id/icon_storage_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:srcCompat="@drawable/ic_camera_gross"
        app:layout_constraintEnd_toEndOf="@+id/image_storage_view"
        app:layout_constraintTop_toTopOf="@+id/image_storage_view"
        android:contentDescription="@string/camera"/>

    <ImageView
        android:id="@+id/icon_storage_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:srcCompat="@drawable/ic_upload_gross"
        app:layout_constraintEnd_toStartOf="@+id/icon_storage_camera"
        app:layout_constraintTop_toTopOf="@+id/image_storage_view"
        android:contentDescription="@string/upload" />



</androidx.constraintlayout.widget.ConstraintLayout>