<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:shrinkColumns="0">

    <TableRow
        android:id="@+id/tableRowStorage"
        android:layout_width="201dp"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView_name"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/textView_name"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView_amout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="10dp"
                android:text="@string/textView_amount"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="105dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/textView_user"
                android:textSize="24sp" />

        </RelativeLayout>
    <RelativeLayout>

        <ImageView
            android:id="@+id/imageView_addStorage"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginStart="15dp"
            app:srcCompat="@android:drawable/ic_input_add" />
    </RelativeLayout>

    </TableRow>






</TableLayout>
